--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node --watch app.js",
+    "start": "node app.js",
     "lint": "npx eslint .",
     "dev": "nodemon app.js"
   },
