--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/backendSprint18/node_modules
-/backendSprint18/.env
-/frontendSprint18/.env
-/frontendSprint18/node_modules
+/backend/node_modules
+/backend/.env
+/frontend/.env
+/frontend/node_modules
