--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^3.1.7"
   },
   "dependencies": {
+    "@eslint/js": "^9.19.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
