--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -1,9 +1,15 @@
 {
-    "extends": "airbnb-base",
-    "rules": {
-      "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-      "no-console": ["warn", { "allow": ["log", "warn", "error"] }],
-      "linebreak-style": "off"
-    },
-    "ignorePatterns": ["eslint.config.mjs"]
+  "extends": "airbnb-base",
+  "rules": {
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
+    "no-console": ["warn", { "allow": ["log", "warn", "error"] }],
+    "linebreak-style": "off"
+  },
+  "ignorePatterns": ["**/.mjs"],
+  "parser": "@babel/eslint-parser",
+  "parserOptions": {
+    "ecmaVersion": 2022,
+    "sourceType": "module",
+    "requireConfigFile": false
   }
+}
