--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -3,6 +3,7 @@
     "rules": {
       "no-underscore-dangle": ["error", { "allow": ["_id"] }],
       "no-console": ["warn", { "allow": ["log", "warn", "error"] }],
-      "linebreak-style": "off"
+      "linebreak-style": "off",
+      "react/prop-types": "off"
     }
   }
