--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,12 +41,14 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.19.0",
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.1.1",
+    "globals": "^15.14.0"
   }
 }
